--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
-<link rel="stylesheet" href="main.css" media="screen">
+<link rel="stylesheet" href="main2.css" media="screen">
     <title>Kitten</title>
   </head>
   <body>
-    <section class="background">
+    <section class="wrapper">
+      <div class="background"></div>
       <div class="kitten"></div>
     </section>
   </body>
